--- a/core/module/Application/view/error/index.phtml
+++ b/core/module/Application/view/error/index.phtml
@@ -1,4 +1,4 @@
-<h1>'An error occurred</h1>
+<h1>An error occurred</h1>
 <h2><?php echo $this->message ?></h2>
 
 <?php if (isset($this->display_exceptions) && $this->display_exceptions): ?>
@@ -40,7 +40,7 @@
             <dd>
                 <pre class="prettyprint linenums"><?php echo $e->getMessage() ?></pre>
             </dd>
-            <dt><?php echo 'Stack trace') ?>:</dt>
+            <dt>Stack trace:</dt>
             <dd>
                 <pre class="prettyprint linenums"><?php echo $e->getTraceAsString() ?></pre>
             </dd>
