--- a/core/module/Application/view/layout/layout.phtml
+++ b/core/module/Application/view/layout/layout.phtml
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<title>House</title>
+ 
+<link rel="stylesheet" href="/css/main.css" type="text/css" />
+ 
+</head>
+ 
+<body id="index" class="home">
  <?php echo $this->content; ?>
+</body>
+
+<script src="/js/vendor/tquery/tquery-bundle-require.min.js"></script>
+<script src="/js/vendor/jquery-2.0.3.min.js"></script>
+<script src="/js/app.js"></script>
+</html>
