--- a/core/module/Application/view/application/index/index.phtml
+++ b/core/module/Application/view/application/index/index.phtml
@@ -6,6 +6,6 @@
 
 <script type="text/javascript">
 	var user = <?php echo json_encode($this->userData); ?>;
-	var item_list = <?php echo json_encode($this->items); ?>;
+	var items_list = <?php echo json_encode($this->items); ?>;
 	var users_online = <?php echo json_encode($this->onlineUsers); ?>;
 </script>
