Add multiple user support.

--- a/core/module/Application/view/application/index/index.phtml
+++ b/core/module/Application/view/application/index/index.phtml
@@ -1,6 +1,6 @@
 <div id="controller-info">
 	<p class="text">
-		Use the arrow keys to move and whole space to pick item.
+		Use the arrow keys to move and hold space to pick cubes.
 	</p>
 </div>
 
