--- a/cookbooks/webapp/templates/default/site.erb
+++ b/cookbooks/webapp/templates/default/site.erb
@@ -26,6 +26,8 @@ server {
         fastcgi_buffers 256 16k;
         fastcgi_busy_buffers_size 256k;
         fastcgi_temp_file_write_size 256k;
-        fastcgi_read_timeout 240;
+        fastcgi_connect_timeout 300;
+        fastcgi_send_timeout 300;
+        fastcgi_read_timeout 300;
     }
 }
