Add link to source code.

--- a/core/module/Application/view/application/index/index.phtml
+++ b/core/module/Application/view/application/index/index.phtml
@@ -1,6 +1,6 @@
 <div id="controller-info">
 	<p class="text">
-		Use the arrow keys to move and hold space to pick cubes.
+		Use the arrow keys to move and hold space to pick cubes. (<a href="https://github.com/miguel250/house">source code</a>)
 	</p>
 </div>
 
